# kit2024

./: .gitignore  README.md  ex01.tex
code/: .gitignore  CMakeLists.txt  CNFFormula.h  SolverTypes.h  StreamBuffer.h  essential.cc
code/src/: essential-prep.cc  essential.cc  phole.cc  pigeonhole.cc  slursat.cc  trail.h
code/src/util/: CNFFormula.h  SolverTypes.h  StreamBuffer.h  VariableAllocator.h
code/tests/: trailtest.cc
exercises/: ex1.tex  ex2.tex  ex3.tex  ex4.tex  ex5.tex
exercises/hidoku/: hidokus.txt
exercises/sudoku/: puzzle03a.sudoku  puzzle03b.sudoku  puzzle04a.sudoku  puzzle04b.sudoku  puzzle05a.sudoku  puzzle05b.sudoku  puzzle06a.sudoku  puzzle06b.sudoku  puzzle07a.sudoku  puzzle07b.sudoku  puzzle08a.sudoku  puzzle08b.sudoku  puzzle09a.sudoku  puzzle09b.sudoku  puzzle10a.sudoku  puzzle10b.sudoku  puzzle11a.sudoku  puzzle11b.sudoku  puzzle12a.sudoku  puzzle12b.sudoku  puzzle13a.sudoku  puzzle13b.sudoku  puzzle14a.sudoku  puzzle14b.sudoku  puzzle15a.sudoku  puzzle15b.sudoku
references/: 1995_Freeman_Thesis.ps
slides/: ex01.tex  exercises.tex  l00-commands.tex  l01-introduction.tex  l02-encodings.tex  l03-algorithms.tex  l04-cdcl.tex  l04-heuristics.tex  l06-cdcl.tex  l07-preprocessing.tex  l08-proofs.tex  l09-maxsat.tex  l10-planning.tex  l11-applications.tex  l12-proofs.tex  l13-proof-pragmatics-parallelism.tex  l14-smt.tex  references.bib  sdqbeamer.cls
slides/figures/l02/: impgraph-src.odg
